--- a/ghi/src/styles/styles2.css
+++ b/ghi/src/styles/styles2.css
@@ -225,7 +225,7 @@ button,
 [type='submit'] {
   -webkit-appearance: button;
   /* 1 */
-  background-color: green;
+  background-color: rgb(32, 32, 240);
   /* 2 */
   background-image: none;
   /* 2 */
