--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -1,4 +1,12 @@
-.App {
+.main-body {
+    height: 100vh;
+    width: 100vw;
+    background-color: #E99D72;
+    border-radius: 30px;
+    display: flex;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -11,4 +19,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
