--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -1,7 +1,8 @@
 .main-body {
     height: 100vh;
     width: 100vw;
-    background-color: #E99D72;
+    /* background-color: #E99D72; */
+    background: #28353b;
     border-radius: 30px;
     display: flex;
 }
