--- a/ghi/src/sidebar/sidebarButtons/SidebarButton.css
+++ b/ghi/src/sidebar/sidebarButtons/SidebarButton.css
@@ -17,7 +17,7 @@ a {
 }
 
 .btn-body.active {
-    background-color: rgba(244, 187, 146, 1);
+    background-color: #556770;
     color: #fff;
     transform: scale(1.05);
 }
