--- a/ghi/src/sidebar/Sidebar.css
+++ b/ghi/src/sidebar/Sidebar.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    margin-left: 5px;
 }
 
 .profile-img {
@@ -14,3 +15,6 @@
     margin-top: 20px;
 }
 
+.btn-trans {
+    background-color: transparent;
+}
