--- a/ghi/src/groups/groups.css
+++ b/ghi/src/groups/groups.css
@@ -1,12 +1,18 @@
+@font-face {
+    font-family: 'Retro';
+    src: local('PressStart2P-Regular'),
+        url('../fonts/PressStart2P-Regular.ttf') format('truetype');
+}
+
 .screen-container {
-    width: calc(130% - 20px);
+    width: calc(130% - 80px);
     height: 100%;
     background-color: #303b40;
     border-radius: 30px;
     background-color: #303b40;
     opacity: 1;
     background-image:  repeating-radial-gradient(
-        circle at center left,
+        circle at top,
         transparent 0,
         #303b40 100px
         ),
@@ -71,13 +77,15 @@
     -webkit-line-clamp: 2;
     line-clamp: 2;
     -webkit-box-orient: vertical;
+    font-family: "Retro";
 }
 
 .group-subtitle {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 12px;
     margin: 0px;
     color: white;
+    font-family: "Retro";
 }
 
 .group-subsub {
@@ -85,6 +93,7 @@
     font-size: 16px;
     margin: 0px;
     color: white;
+    font-family: "Retro";
 }
 
 .insta {
