--- a/ghi/src/groups/groups.css
+++ b/ghi/src/groups/groups.css
@@ -29,6 +29,13 @@
     border-radius: 15px;
     justify-content: space-around;
     object-fit: cover;
+    transition: all 0.5s ease;
+    cursor: pointer;
+}
+
+.image:hover {
+    opacity: 1;
+    transform: scale(1.04);
 }
 
 .group-body {
@@ -51,23 +58,16 @@
     padding: 1%;
     margin-bottom: 2%;
     background: rbg(30, 42, 62);
-    background: linear-gradient(
+    /* background: linear-gradient(
         75deg,
         rgb(40, 58, 88) 0%,
         rgba(54, 69, 98, 0) 100%
-    );
-    transition: all 0.2s ease;
-    cursor: pointer;
-}
-
-.group-card:hover {
-    opacity: 1;
-    transform: scale(1.02);
+    ); */
 }
 
 .group-title {
-    font-weight: 800;
-    font-size: 25px;
+    font-weight: 500;
+    font-size: 30px;
     color: white;
     margin: 10px 0px 10px;
     display: -webkit-box;
@@ -77,6 +77,7 @@
     line-clamp: 2;
     -webkit-box-orient: vertical;
     font-family: "Retro";
+    height: 90px;
 }
 
 .group-subtitle {
@@ -85,6 +86,13 @@
     margin: 0px;
     color: white;
     font-family: "Retro";
+    height: 25px;
+}
+
+.group-size {
+    font-weight: 800;
+    font-size: 16px;
+    color: red;
 }
 
 .group-subsub {
@@ -93,16 +101,20 @@
     margin: 0px;
     color: white;
     font-family: "Retro";
+    height: 50px;
 }
 
 .insta {
     padding: 0.25rem;
     margin: -0.25rem;
     color: white;
+    /* transition: all 0.5s ease; */
 }
 
 .insta:hover {
     color: #3B82F6;
+    opacity: 1;
+    /* transform: scale(1.04); */
 }
 
 .insta:focus {
@@ -123,4 +135,11 @@
     height: 3rem;
     overflow: visible;
     fill: currentColor;
+    transition: all 0.5s ease;
+}
+
+.insta2:hover {
+    color: #3B82F6;
+    opacity: 1;
+    transform: scale(1.04);
 }
