--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -1,4 +1,14 @@
-.App {
+.main-body {
+    height: 100vh;
+    width: 100vw;
+    /* background-color: #E99D72; */
+    background: #28353b;
+    /* border-radius: 30px; */
+    display: flex;
+    overflow-y: auto;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -11,4 +21,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
