--- a/ghi/src/styles/styles2.css
+++ b/ghi/src/styles/styles2.css
@@ -205,6 +205,12 @@ textarea {
   /* 3 */
 }
 
+button:hover {
+  opacity: 1;
+  transform: scale(1.08);
+  transition: all 0.8s ease;
+}
+
 /*
 Remove the inheritance of text transform in Edge and Firefox.
 */
@@ -212,6 +218,7 @@ Remove the inheritance of text transform in Edge and Firefox.
 button,
 select {
   text-transform: none;
+  transition: all 0.08s ease;
 }
 
 /*
@@ -225,7 +232,7 @@ button,
 [type='submit'] {
   -webkit-appearance: button;
   /* 1 */
-  background-color: rgb(32, 32, 240);
+  background-color: #f36a5d;
   /* 2 */
   background-image: none;
   /* 2 */
@@ -1705,5 +1712,3 @@ code {
     width: 50%;
   }
 }
-
-
