--- a/ghi/src/styles/styles2.css
+++ b/ghi/src/styles/styles2.css
@@ -211,6 +211,12 @@ button:hover {
   transition: all 0.8s ease;
 }
 
+button:hover {
+  opacity: 1;
+  transform: scale(1.08);
+  transition: all 0.8s ease;
+}
+
 /*
 Remove the inheritance of text transform in Edge and Firefox.
 */
