--- a/ghi/src/homies/homies.css
+++ b/ghi/src/homies/homies.css
@@ -4,7 +4,7 @@
         url('../fonts/PressStart2P-Regular.ttf') format('truetype');
 }
 
-.screen-container {
+.screen-container6 {
     width: calc(130% - 80px);
     height: 100%;
     background-color: #303b40;
@@ -19,20 +19,16 @@
         repeating-linear-gradient( #23365655, #233656 );
 }
 
-.flex {
-    display: flex;
-}
-
-.image {
+/* .image {
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     aspect-ratio: 1;
     border-radius: 15px;
     justify-content: space-around;
     object-fit: cover;
-}
+} */
 
-.group-body {
+.group-body6 {
     width: 94%;
     height: 80%;
     padding: 2%;
@@ -42,7 +38,7 @@
     justify-content: space-between;
 }
 
-.group-card {
+.group-card6 {
     position: relative;
     width: 30%;
     height: 35%;
@@ -61,12 +57,12 @@
     cursor: pointer;
 }
 
-.group-card:hover {
+.group-card6:hover {
     opacity: 1;
     transform: scale(1.02);
 }
 
-.group-title {
+.group-title6 {
     font-weight: 800;
     font-size: 25px;
     color: white;
@@ -80,7 +76,7 @@
     font-family: "Retro";
 }
 
-.group-subtitle {
+.group-subtitle6 {
     font-weight: 400;
     font-size: 12px;
     margin: 0px;
@@ -88,7 +84,7 @@
     font-family: "Retro";
 }
 
-.group-subsub {
+.group-subsub6 {
     font-weight: 400;
     font-size: 16px;
     margin: 0px;
@@ -96,30 +92,30 @@
     font-family: "Retro";
 }
 
-.insta {
+.insta5 {
     padding: 0.25rem;
     margin: -0.25rem;
     color: white;
 }
 
-.insta:hover {
+.insta5:hover {
     color: #3B82F6;
 }
 
-.insta:focus {
+.insta5:focus {
     outline: none;
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
-.insta:focus-visible {
+.insta5:focus-visible {
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
-.insta:ring-primary {
+.insta5:ring-primary {
     box-shadow: 0 0 0 2px #6366F1;
 }
 
-.insta2 {
+.insta7 {
     width: 6rem;
     height: 3rem;
     overflow: visible;
