--- a/ghi/src/profile/profile.css
+++ b/ghi/src/profile/profile.css
@@ -1,31 +1,10 @@
-/* .profile-content {
-  width: 30%;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-.profile-posts {
-  width: 70%;
-  padding: 20px;
-  box-sizing: border-box;
-} */
-
-/* If you need some space between .profile-content and .profile-posts */
-/* .profile-content {
-  margin-right: 10px;
-}
-
-.profile-posts {
-  margin-left: 10px;
-} */
-
 @font-face {
     font-family: 'Retro';
     src: local('PressStart2P-Regular'),
         url('../fonts/PressStart2P-Regular.ttf') format('truetype');
 }
 
-.screen-container {
+.screen-container9 {
     font-family: 'Retro', sans-serif;
     width: 140%; /* Adjust the width to make it larger */
     height: 100%;
@@ -42,20 +21,7 @@
         repeating-linear-gradient(#23365655, #233656);
 }
 
-.flex {
-    display: flex;
-}
-
-.image {
-    width: 100%;
-    /* height: 100%; */
-    aspect-ratio: 1;
-    border-radius: 15px;
-    justify-content: space-around;
-    object-fit: cover;
-}
-
-.group-body {
+.group-body9 {
     font-family: 'Retro', sans-serif;
     width: 100%;
     height: 80%;
@@ -66,7 +32,7 @@
     justify-content: space-between;
 }
 
-.group-card {
+.group-card9 {
     position: relative;
     width: 100%;
     height: 100%;
@@ -86,12 +52,12 @@
     overflow: hidden;
 }
 
-.group-card:hover {
+.group-card9:hover {
     opacity: 1;
     transform: scale(1.02);
 }
 
-.group-title {
+.group-title9 {
     font-weight: 800;
     font-size: 25px;
     color: white;
@@ -105,7 +71,7 @@
     font-family: "Retro";
 }
 
-.group-subtitle {
+.group-subtitle9 {
     font-weight: 400;
     font-size: 12px;
     margin: 0px;
@@ -113,41 +79,10 @@
     font-family: "Retro";
 }
 
-.group-subsub {
+/* .group-subsub9 {
     font-weight: 400;
     font-size: 16px;
     margin: 0px;
     color: white;
     font-family: "Retro";
-}
-
-.insta {
-    padding: 0.25rem;
-    margin: -0.25rem;
-    color: white;
-    font-family: "Retro";
-}
-
-.insta:hover {
-    color: #3B82F6;
-}
-
-.insta:focus {
-    outline: none;
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5);
-}
-
-.insta:focus-visible {
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5);
-}
-
-.insta:ring-primary {
-    box-shadow: 0 0 0 2px #6366F1;
-}
-
-.insta2 {
-    width: 6rem;
-    height: 3rem;
-    overflow: visible;
-    fill: currentColor;
-}
+} */
