--- a/ghi/src/sidebar/sidebarButtons/SidebarButtonLogout.css
+++ b/ghi/src/sidebar/sidebarButtons/SidebarButtonLogout.css
@@ -2,33 +2,32 @@ a {
     text-decoration: none !important;
 }
 
-.btn-body {
+.btn-body1 {
     height: 80px;
-    width: 80px;
+    width: 70px;
     border-radius: 20px;
     color: #f36a5d;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 5px auto;
-    transition: all 0.2s ease;
+    margin: 10px auto;
+    transition: all 0.3s ease;
     background-color: rgba(244, 187, 146, 0.0);
 }
 
-.btn-body.active {
+.btn-body1.active {
     background-color: #3f4b50;
     color: #fe9086;
     transform: scale(1.10);
-    height: 100px;
 }
 
-.btn-body:hover {
+.btn-body1:hover {
     color: #fe9086;
-    transform: scale(1.08);
+    transform: scale(1.05);
 }
 
-.btn-title {
+.btn-title1 {
     margin: 10px;
     padding: 8px auto;
     font-weight: 600;
